--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!--[if IE]><script src="excanvas.js"></script><![endif]-->
     <div class="content-wrapper">
         <header class="header">
-            <a class="logo__container" href="/"><img class="logo" src="http://placehold.it/200x200" alt="Pokedraw"/></a>
+            <a class="logo__container" href="/"><img class="logo" src="img/logo.png" alt="Pokedraw"/></a>
            
             <div class="header__slider">
                 <div class="header__flickity-slider js-header__flickity-slider"><!-- Pokedraw images are loaded into here --></div>
@@ -42,7 +42,7 @@
         
             <div class="container">
 
-                <h1 class="hero"><!-- You have 45 seconds to draw a random Pok&#xe9;mon -->.</h1>
+                <h1 class="hero">You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
 
                 <section class="reference-pane">
 
@@ -99,12 +99,12 @@
                     </select>
                 </section>
 
+            </div>
 
                 <section class="sbp-slider js-sbp-slider">
                     <!--Here's where drawings get dynamically added on pageload. -->
                     <a class="sbp-slider__button sbp-slider__button--gallery" href="gallery.html">See more<br/>in the Gallery!</a>
                 </section>
-            </div>
         </section>
 
         <footer class="footer">
@@ -121,7 +121,7 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" style="vertical-align: middle;">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1"><span>if you're having a great time!</span>
                     </form>
-                    <p><strong>10,000,000</strong> Pokedraws and counting!</p>
+                    <p><strong>20,000,000</strong> Pokedraws and counting!</p>
                     <p>Pok&#xe9;mon and all respective names are &trade; &amp; &copy; of Nintendo 1996-2015</p>
                 </div>
                 <div class="footer__byline">Made by <a href="http://jamestw.net">James TW</a></div>
