Added icons. Progress on buy button

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,11 @@
         
             <div class="container">
 
-                <h1 class="hero">You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
+                <div class="hero">
+                    <h1>You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
+                    <a class="buy-button" href="http://twitter.com/share?url=http%3A%2F%2Fpokedraw.net"><span class="icon-shirt"></span>Check it out!</a>
+                </div>
+                
 
                 <section class="reference-pane">
 
