Added styles and extras for purchases

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.0/flickity.min.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-    <meta name="description=" content="Think you can draw a Pokémon? Click here to try it out. It only takes 45 seconds.">
+    <meta name="description" content="Think you can draw a Pokémon? Click here to try it out. It only takes 45 seconds.">
     <!--For Facebook Sharing-->
     <meta property="og:title" content="Pokédraw - Draw a Pokémon in 45 seconds!" />
     <meta property="og:site_name" content="Pokédraw" />
@@ -44,7 +44,11 @@
 
                 <div class="hero">
                     <h1>You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
-                    <a class="buy-button" href="http://twitter.com/share?url=http%3A%2F%2Fpokedraw.net"><span class="icon-shirt"></span>Check it out!</a>
+                    <div class="hero__buy-pitch hide">
+                        <h2>Buy your drawing on a shirt or hat!</h2>
+                        <button class="buy-button animated pulse infinite"><span class="icon-shirt"></span>Check it out!</button>
+                    </div>
+                    
                 </div>
                 
 
@@ -125,8 +129,8 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" style="vertical-align: middle;">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1"><span>if you're having a great time!</span>
                     </form>
-                    <p><strong>20,000,000</strong> Pokedraws and counting!</p>
-                    <p>Pok&#xe9;mon and all respective names are &trade; &amp; &copy; of Nintendo 1996-2015</p>
+                    <p><strong>50,000,000</strong> Pokedraws and counting!</p>
+                    <p>Pok&#xe9;mon and all respective names are &trade; &amp; &copy; of Nintendo 1996-<script>document.write(new Date().getFullYear())</script></p>
                 </div>
                 <div class="footer__byline">Made by <a href="http://jamestw.net">James TW</a></div>
             </div>
