--- a/public/gallery.html
+++ b/public/gallery.html
@@ -7,7 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-    <meta name="description=" content="Check out all of the most recent Pokédraws!">
+    <meta name="description" content="Check out all of the most recent Pokédraws!">
 </head>
 <body>
 
