--- a/public/kids.html
+++ b/public/kids.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.0/flickity.min.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-    <meta name="description=" content="Think you can draw a Pokémon? Click here to try it out. It only takes 45 seconds. (This site is kid friendly!)">
+    <meta name="description" content="100% Kid friendly version of Pokedraw! No outside pics.">
 </head>
 <body>
 
