--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,26 @@
     <meta property="og:image" content="http://www.jamestw.net/pokedraw/img/logo-fb-share.png" />
 </head>
 <body>
-    <script> //Facebook sharing script. No malicious intent here! Install Ghostery if you don't want to be tracked. https://www.ghostery.com/
-        window.fbAsyncInit=function(){FB.init({appId:351920294960632,xfbml:!0,version:"v2.0"})},function(a,b,c){var d,e=a.getElementsByTagName(b)[0];a.getElementById(c)||(d=a.createElement(b),d.id=c,d.src="//connect.facebook.net/en_US/sdk.js",e.parentNode.insertBefore(d,e))}(document,"script","facebook-jssdk");
+    <script>
+    //Facebook sharing script. No malicious intent here! Install Ghostery if you don't want to be tracked. https://www.ghostery.com/
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '351920294960632',
+          xfbml      : true,
+          version    : 'v2.8'
+        });
+        FB.AppEvents.logPageView();
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
     </script>
+
     <div id="fb-root"></div>
 
     <!--[if IE]><script src="excanvas.js"></script><![endif]-->
